manifests/prod/vikunja/EndpointSlice-vikunja.yaml
addressType: IPv4
apiVersion: discovery.k8s.io/v1
endpoints:
  - addresses:
      - 100.83.142.17
    conditions:
      ready: true
kind: EndpointSlice
metadata:
  labels:
    kubernetes.io/service-name: vikunja
  name: vikunja
  namespace: vikunja
ports:
  - name: http
    port: 3005
    protocol: TCP
