manifests/prod/vikunja/Endpoints-vikunja.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: vikunja
  namespace: vikunja
subsets:
  - addresses:
      - ip: 100.83.142.17
    ports:
      - name: http
        port: 3005
