manifests/prod/vikunja/Service-vikunja.yaml
apiVersion: v1
kind: Service
metadata:
  name: vikunja
  namespace: vikunja
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3005
  type: ClusterIP
