manifests/prod/vikunja/Ingress-vikunja.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: k3s-lan-ca
    gethomepage.dev/description: Tasks & projects
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Productivity
    gethomepage.dev/icon: vikunja.svg
    gethomepage.dev/name: vikunja
  name: vikunja
  namespace: vikunja
spec:
  ingressClassName: traefik
  rules:
    - host: vikunja.k3s.lan
      http:
        paths:
          - backend:
              service:
                name: vikunja
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - vikunja.k3s.lan
      secretName: vikunja-tls
